<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="201dp"
        android:layout_height="243dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/inicioButton"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/boton_rectangular_azul"
        android:text="@string/inici0"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />

    <Button
        android:id="@+id/registroButton"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/boton_rectangular_azul"
        android:text="@string/registrate"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inicioButton" />

    <TextView
        android:id="@+id/olvidePassTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/olvid_la_contrase_a"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registroButton" />

    <TextView
        android:id="@+id/ayudaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ayuda"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/olvidePassTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
