<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado">

    <Button
        android:id="@+id/sosButton"
        android:layout_width="228dp"
        android:layout_height="210dp"
        android:background="@drawable/botoncircular"
        android:backgroundTint="#FFFFFF"
        android:text="@string/s_o_s"
        android:textColor="#3366FF"
        android:textSize="59sp"
        app:layout_constraintBottom_toTopOf="@id/contactsTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <TextView
        android:id="@+id/contactsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactanos"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/contactsTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sosButton"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/contactsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactsTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactanoss"
                android:textColor="#3366FF"
                android:textSize="26sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3366FF"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="43dp"
                android:src="@drawable/usuario" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alberto"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center" />

            <ImageView
                android:layout_width="42dp"
                android:layout_height="35dp"
                android:contentDescription="Icono de llamadas"
                android:src="@drawable/llamada" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3366FF"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="43dp"
                android:src="@drawable/usuario" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="LEONARDO"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center" />


            <ImageView
                android:layout_width="42dp"
                android:layout_height="35dp"
                android:src="@drawable/llamada" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3366FF"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="43dp"
                android:src="@drawable/usuario" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ARELI"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center" />


            <ImageView
                android:layout_width="42dp"
                android:layout_height="35dp"
                android:contentDescription="Icono de llamadas"
                android:src="@drawable/llamada" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
